--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ github_username:  amandavisconti
 
 # Build settings
 markdown: kramdown
-theme: minima
+theme: jekyll-theme-cayman
 gems:
   - jekyll-feed
 exclude:
